脚本更新